workaround missing SetSelectedSheet call for print preview, tdf#99333

Change-Id: If986b156397e15d2f1faa52b7d52b1ce0b37d213